--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
   "license": "MIT",
   "scripts": {
     "dev": "remax build -t wechat -w",
-    "build": "cross-env NODE_ENV=production remax build -t wechat"
+    "build": "cross-env NODE_ENV=production remax build -t wechat",
+    "icon": "npx iconfont-remax"
   },
   "dependencies": {
     "@remax/plugin-sass": "^1.0.0",
     "anna-remax-ui": "^1.8.9",
     "react": "^16.12.0",
-    "remax": "^2.7.7"
+    "remax": "^2.7.7",
+    "remax-iconfont-cli": "^1.1.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.2"
